GNOME Bugzilla – Bug 786435
Don't encode timezone in generated files
Last modified: 2017-08-20 21:23:11 UTC
Created attachment 357824 [details] [review] patch Whilst working on the Reproducible Builds effort [0], we noticed that gcab generates .cab files that are not reproducible. This affects packages such as fwupd. This is because the embedded dates are encoded with the current timezone. [0] https://reproducible-builds.org/
Review of attachment 357824 [details] [review]: why is gmtime better than localtime?
localtime is expressed relative to the user's specified timezone, whilst gmtime is in UTC. This is important so that users building the exact same contents in different timezones will end up with the same exact .cab file.